--- a/zpg_project/zpg_project.vcxproj.filters
+++ b/zpg_project/zpg_project.vcxproj.filters
@@ -53,6 +53,12 @@
     <ClInclude Include="ShaderFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sphere.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bushes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="baseVertexShader.glsl">
