--- a/zpg_project/zpg_project.vcxproj
+++ b/zpg_project/zpg_project.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DrawableObject.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelFactory.cpp" />
@@ -154,6 +155,8 @@
     <ClInclude Include="CameraMovementEnum.h" />
     <ClInclude Include="ICameraObserver.h" />
     <ClInclude Include="DrawableObject.h" />
+    <ClInclude Include="ILightObserver.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelFactory.h" />
     <ClInclude Include="NumberGenerator.h" />
@@ -175,7 +178,11 @@
   <ItemGroup>
     <None Include="baseFragmentShader.glsl" />
     <None Include="baseVertexShader.glsl" />
-    <None Include="redColorFragmentShader.glsl" />
+    <None Include="blinnPhongLightFragmentShader.glsl" />
+    <None Include="constantLightFragmentShader.glsl" />
+    <None Include="lambertLightFragmentShader.glsl" />
+    <None Include="lightVertexShader.glsl" />
+    <None Include="phongLightFragmentShader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
